UTXO UX overhaul:\n- Visualize change UTXO; remove progress steps and tx ID from viz\n- Reorder layout: simulator on top; move full wallet status into simulator panel\n- New UTXO green/no-scale; selected UTXO orange/no-scale; keep states after sim\n- Add recent used UTXOs section; clear on reset\n- Default recipient set to first wallet after each sim\n- Show UTXO created time (or ‘알 수 없음’)\n- Remove ‘마지막 거래 성공’ banner and preview card\n- Display all BTC amounts as integers\n- Update .gitignore to ignore SQLite -wal/-shm

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Playground Miner</title>
+    <title>한입 비트코인 놀이터</title>
   </head>
   <body class="bg-slate-50">
     <div id="app"></div>
