Add Kingstone wallet model, API endpoints, and frontend flows

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,8 +18,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192x192.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-72x72.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-72x72.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <title>비트코인 놀이터</title>
   </head>
@@ -41,4 +40,3 @@
     </script>
   </body>
 </html>
-
