feat: overhaul UI/UX, add Home Page, and enhance mining features
- Refactor App layout and introduce 'pastel' theme
- Remove mandatory Nickname Setup flow and enable guest access
- Add new Home Page as the default landing
- Integrate mining status bar directly into MiningPanel
- Add support for custom messages in mined blocks
- Update routing to remove nickname guards
- Improve responsiveness and styling across components

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="BTC 놀이터" />
+    <meta name="apple-mobile-web-app-title" content="한입 놀이터" />
 
     <!-- iOS Icons -->
     <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png" />
@@ -22,7 +22,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
 
-    <title>비트코인 놀이터</title>
+    <title>한입 놀이터</title>
   </head>
   <body>
     <div id="app"></div>
