feat: implement synthetic deposit simulation and enhance OG meta tags
- Add support for synthetic deposit/savings assets (e.g., '예금 4%') in finance analysis
- Implement interest income tax (15.4%) calculation for synthetic deposit assets
- Add OG and Twitter meta tags to index.html for better social sharing
- Update safe asset list to include major exchange rates (USD/KRW, JPY/KRW, etc.)
- Refine tax calculation logic to handle synthetic deposit products separately

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#111827" />
     <meta name="description" content="비트코인 학습 및 채굴 시뮬레이션 플랫폼" />
+    <meta property="og:title" content="한입 놀이터" />
+    <meta property="og:description" content="비트코인을 눈으로 보고 즐기세요 ~ 경험하세요" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/bitcoin-og.png" />
+    <meta property="og:image:alt" content="비트코인을 눈으로 보고 즐기세요 ~ 경험하세요" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="한입 놀이터" />
+    <meta name="twitter:description" content="비트코인을 눈으로 보고 즐기세요 ~ 경험하세요" />
+    <meta name="twitter:image" content="/bitcoin-og.png" />
+    <meta name="twitter:image:alt" content="비트코인을 눈으로 보고 즐기세요 ~ 경험하세요" />
 
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="/manifest.json" />
