--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,12 +8,12 @@
     <meta property="og:title" content="한입 놀이터" />
     <meta property="og:description" content="비트코인을 눈으로 보고 즐기세요 ~ 경험하세요" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/bitcoin-og.png" />
+    <meta property="og:image" content="/playground-hero-og.png" />
     <meta property="og:image:alt" content="비트코인을 눈으로 보고 즐기세요 ~ 경험하세요" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="한입 놀이터" />
     <meta name="twitter:description" content="비트코인을 눈으로 보고 즐기세요 ~ 경험하세요" />
-    <meta name="twitter:image" content="/bitcoin-og.png" />
+    <meta name="twitter:image" content="/playground-hero-og.png" />
     <meta name="twitter:image:alt" content="비트코인을 눈으로 보고 즐기세요 ~ 경험하세요" />
 
     <!-- PWA Meta Tags -->
